--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export(connect)
 export(createActor)
 export(createObject)
+export(createResult)
 export(createStatement)
 export(createVerb)
 export(formatJSON)
+export(getActivityType)
+export(getActivityTypes)
 export(getVerb)
 export(getVerbList)
 export(observeEvents)
