Initial statement creation methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ export(createVerb)
 export(formatJSON)
 export(getActivityType)
 export(getActivityTypes)
+export(getActorDefinition)
+export(getActorTypes)
+export(getResultDefinition)
 export(getVerb)
 export(getVerbList)
 export(observeEvents)
 export(test)
 import(htmltools)
 import(httr)
-import(jsonlite)
 import(shiny)
