--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(person("Robert", "Carey", email = "rpc5102@psu.edu",
   role = c("aut", "cre")))
 Maintainer: Robert Carey <rpc5102@psu.edu>
 Description: Adds Learning Locker xAPI support to Shiny Applications.
-Imports: shiny (>= 0.11), htmltools, uuid
+Imports: shiny (>= 0.11), htmltools, uuid, jsonlite
 URL: https://github.com/rpc5102/rlocker
 BugReports: https://github.com/rpc5102/rlocker/issues
 License: GPL-2.0+
