--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getResultDefinition)
 export(getVerb)
 export(getVerbList)
 export(observeEvents)
+export(store)
 export(test)
 import(htmltools)
 import(httr)
