fleshing out objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,9 @@ export(getActivityTypes)
 export(getAgentDefinition)
 export(getAgentTypes)
 export(getExtensionDefinition)
+export(getInteractionType)
+export(getInteractionTypes)
+export(getObjectTypes)
 export(getResultDefinition)
 export(getVerb)
 export(getVerbList)
