--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(createAgent)
 export(createExtension)
 export(createObject)
 export(createResult)
+export(createScore)
 export(createStatement)
 export(createVerb)
 export(getActivityType)
@@ -20,6 +21,7 @@ export(getInteractionTypes)
 export(getObjectDefinition)
 export(getObjectTypes)
 export(getResultDefinition)
+export(getScoreDefinition)
 export(getSupportedComponents)
 export(getVerb)
 export(getVerbList)
