split actor; created group; created context;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,11 @@
 
 export(checkSupportedComponents)
 export(connect)
+export(createActor)
 export(createAgent)
+export(createContext)
 export(createExtension)
+export(createGroup)
 export(createObject)
 export(createResult)
 export(createScore)
@@ -11,8 +14,10 @@ export(createStatement)
 export(createVerb)
 export(getActivityType)
 export(getActivityTypes)
+export(getActorDefinition)
+export(getActorTypes)
 export(getAgentDefinition)
-export(getAgentTypes)
+export(getContextDefinition)
 export(getExtensionDefinition)
 export(getInteractionComponent)
 export(getInteractionComponents)
