--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rlocker",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "Learning Locker for R Shiny",
   "repository": {
     "type": "git",
@@ -14,17 +14,17 @@
     "build": "npm run compile-src"
   },
   "author": "ROBERT PATRICK CAREY III",
-  "license": "GPL-2.0+",
+  "license": "GPL-3.0+",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "babel-loader": "^8.0.6",
     "documentation": "^9.3.1",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.2.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.38.0",
-    "webpack-command": "^0.4.2",
+    "eslint": "^6.5.1",
+    "eslint-loader": "^3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.1",
+    "webpack-command": "^0.5.0",
     "webpack-glob-entries": "^1.0.1"
   },
   "dependencies": {}
