api model interface (unfinished) #3 + get<Class> return changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(getInteractionComponent)
 export(getInteractionComponents)
 export(getInteractionType)
 export(getInteractionTypes)
+export(getInterface)
+export(getInterfaceList)
 export(getModel)
 export(getModelList)
 export(getObjectDefinition)
@@ -41,16 +43,8 @@ export(retrieve)
 export(store)
 export(test)
 export(validateObject)
-import("for")
-import(API)
-import(Learning)
-import(Locker)
-import(Sets)
 import(htmltools)
 import(httr)
-import(needed)
-import(scripts)
 import(shiny)
-import(up)
 importFrom(jsonlite,toJSON)
 importFrom(uuid,UUIDgenerate)
