--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
-Package: rlocker
+Package: rLocker
 Type: Package
 Title: Learning Locker for Shiny
-Version: 0.2.4.4
-Date: 2020-09-24
+Version: 0.2.5
+Date: 2021-07-12
 Authors@R: c(person("Robert", "Carey", email = "rpc5102@psu.edu",
   role = c("aut", "cre")))
 Maintainer: Robert Carey <rpc5102@psu.edu>
 Description: Adds Learning Locker xAPI support to Shiny Applications.
 Imports: shiny (>= 0.11), htmltools, uuid, jsonlite, stringr
-URL: https://github.com/rpc5102/rlocker
-BugReports: https://github.com/rpc5102/rlocker/issues
+URL: https://github.com/EducationShinyAppTeam/rLocker
+BugReports: https://github.com/EducationShinyAppTeam/rLocker/issues
 License: GPL-3.0+
 Encoding: UTF-8
 NeedsCompilation: no
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Depends: httr
